--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <header></header>
     
     <main>
-        <nav></nav>
+        <nav class="leftmenu"></nav>
 
-        <section class="mainpart"></section>
+        <section class="mainpart">
+            <nav></nav>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+        </section>
     </main>
 
     <footer></footer>
