--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"> 
     <title>Spotify</title>
 </head>
 <body>
 
     <!-- header con upgrade in fixed, va sopra al main(destro) ma sotto al nav -->
-    <header></header>
+    <header>
+        <a class="upgrade" href="#">EFFETTUA L'UPGRADE</a>
+    </header>
     
     <main>
         <nav class="leftmenu"></nav>
