parte left menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> 
     <title>Spotify</title>
 </head>
 <body>
@@ -19,7 +20,23 @@
     </header>
     
     <main>
-        <nav class="leftmenu"></nav>
+        <section class="leftmenu">
+            <img src="img/logo.svg" alt="">  
+            <nav>
+                <ul>
+                    <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i>Cerca</a></li>
+                    <li><a href="#"><i class="fa-solid fa-book"></i>La tua libreria</a></li>
+                </ul>
+            </nav>  
+            <h4>PLAYLIST</h4>
+            <ul>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+            </ul>   
+
+        </section>
 
         <section class="mainpart">
             <nav></nav>
