--- a/index.html
+++ b/index.html
@@ -21,16 +21,26 @@
     
     <main>
         <section class="leftmenu">
-            <img src="img/logo.svg" alt="">  
+            <img class="logo" src="img/logo.svg" alt="">  
             <nav>
                 <ul>
-                    <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
-                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i>Cerca</a></li>
-                    <li><a href="#"><i class="fa-solid fa-book"></i>La tua libreria</a></li>
+                    <li class="here"><a href="#"><img class="icon" src="img/home.svg"> Home</a></li>
+                    <li><a href="#"><img class="icon" src="img/search.svg"> Cerca</a></li>
+                    <li><a href="#"><img class="icon" src="img/libreria.svg"> La tua libreria</a></li>
                 </ul>
             </nav>  
             <h4>PLAYLIST</h4>
-            <ul>
+            <ul class="overflow">
+                <li><a href="#"><i class="fa-solid fa-plus"></i>Crea la tua playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
+                <li><a href="#">Nome playlist</a></li>
                 <li><a href="#">Nome playlist</a></li>
                 <li><a href="#">Nome playlist</a></li>
                 <li><a href="#">Nome playlist</a></li>
