--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <main>
         <section class="leftmenu">
-            <img class="logo" src="img/logo.svg" alt="">  
+            <img class="logo" class="icon" src="img/logo.svg" alt="">  
             <nav>
                 <ul>
                     <li class="here"><a href="#"><img class="icon" src="img/home.svg"> Home</a></li>
@@ -45,9 +45,12 @@
                 <li><a href="#">Nome playlist</a></li>
                 <li><a href="#">Nome playlist</a></li>
             </ul>   
+            <div class="menufoot">
+                <a class="download" href="#"><img class="icon" src="img/download.svg">Installa app</a>
+                <a class="login" href="#"><img class="icon" src="img/profile.svg">Jhon Doe</a>
+            </div>
 
         </section>
-
         <section class="mainpart">
             <nav></nav>
             <div class="row"></div>
