--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 </ul>
             </nav>  
             <h4>PLAYLIST</h4>
-            <ul class="overflow">
-                <li><a href="#"><i class="fa-solid fa-plus"></i>Crea la tua playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-                <li><a href="#">Nome playlist</a></li>
-            </ul>   
+            <div class="overflow">
+                <ul>
+                    <li><a href="#"><i class="fa-solid fa-plus"></i>Crea la tua playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                </ul> 
+            </div>    
             <div class="menufoot">
                 <a class="download" href="#"><img class="icon" src="img/download.svg">Installa app</a>
                 <a class="login" href="#"><img class="icon" src="img/profile.svg">Jhon Doe</a>
@@ -52,9 +52,62 @@
 
         </section>
         <section class="mainpart">
-            <nav></nav>
-            <div class="row"></div>
-            <div class="row"></div>
+            <nav>
+                <ul>
+                    <li><a href="#">IN EVIDENZA</a></li>
+                    <li><a href="#">PODCAST</a></li>
+                    <li><a href="#">CLASSIFICHE</a></li>
+                    <li><a href="#">GENERI E MOOD</a></li>
+                    <li><a href="#">NUOVE USCITE</a></li>
+                    <li><a href="#">SCOPRI</a></li>
+                </ul>
+            </nav>
+            <h2>Recently played</h2>
+            <div class="row">
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div> 
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+            </div>
+            <h2>Creato per Jhon Don</h2>
+            <div class="row">
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                <div class="colonna">
+                    <img src="img/metal_lifting.jpg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+            </div>
             <div class="row"></div>
         </section>
     </main>
