footer in progres

--- a/index.html
+++ b/index.html
@@ -70,27 +70,27 @@
                     <div class="subtitle">subtitle</div>
                 </div> 
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/stranger.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/aquietplace.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/split.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/cure.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/sinister.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
@@ -98,21 +98,44 @@
             <h2>Creato per Jhon Don</h2>
             <div class="row">
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/radar.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
                 <div class="colonna">
-                    <img src="img/metal_lifting.jpg">
+                    <img src="img/mixdaily.jpeg">
                     <h3 class="songtitle">Heavy metal</h3>
                     <div class="subtitle">subtitle</div>
                 </div>
             </div>
-            <div class="row"></div>
+            <h2>Artisti più popolari</h2>
+            <div class="row">
+                <div class="colonna">
+                    <img class="rounded" src="img/youg.jpeg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                <div class="colonna">
+                    <img class="rounded" src="img/einaudi.jpeg">
+                    <h3 class="songtitle">Heavy metal</h3>
+                    <div class="subtitle">subtitle</div>
+                </div>
+                
+            </div>
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="asidefoot">
+            <img class="playimage" src="img/sinister.jpeg">
+            <div class="play">
+                <h3>Sinister</h3>
+                <div>Nome brano</div>
+            </div>
+        </div>
+        <div class="midfoot">dvsdv</div>
+        <div class="asidefoot">dvdsvds</div>
+    </footer>
 
 
 </body>
