--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                         <li><a href="#"><img class="icon" src="img/libreria.svg"> La tua libreria</a></li>
                     </ul>
                 </nav>  
-                <h4>PLAYLIST</h4>
             </div>
             <div class="menushort">
                 <ul>
@@ -42,6 +41,7 @@
                 
             </div>
             <div class="overflow">
+                <h4>PLAYLIST</h4>
                <a class="playplus" href="#"><i class="fa-solid fa-plus"></i>Crea la tua playlist</a>
                 <ul>
                     <li><a href="#">Nome playlist</a></li>
@@ -59,7 +59,13 @@
                     <li><a href="#">Nome playlist</a></li>
                     <li><a href="#">Nome playlist</a></li>
                     <li><a href="#">Nome playlist</a></li>
-                    
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
+                    <li><a href="#">Nome playlist</a></li>
                 </ul> 
             </div>    
             <div class="menufoot">
