--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <h3>Sinister</h3>
                 <div>Nome brano</div>
             </div>
-            <a href="#"><i class="fa-regular fa-heart"></i></a>
+            <a href="#"><i class="battito fa-regular fa-heart"></i></a>
             <a href="#"><i class="fa-regular fa-folder"></i></a>
         </div>
         <div class="midfoot">
