--- a/index.html
+++ b/index.html
@@ -82,15 +82,27 @@
         <section class="mainpart">
             <nav>
                 <ul>
-                    <div class="greensignal">
-                        <li><a href="#">IN EVIDENZA</a></li>
+                    <li>
+                        <div class="greensignal">
+                        <a href="#">IN EVIDENZA</a>
                         <div class="heregreen"></div>
-                    </div>
-                    <div class="greensignal"><li><a href="#">PODCAST</a></li></div>
-                    <div class="greensignal"><li><a href="#">CLASSIFICHE</a></li></div>
-                    <div class="greensignal"><li><a href="#">GENERI E MOOD</a></li></div>
-                    <div class="greensignal"><li><a href="#">NUOVE USCITE</a></li></div>
-                    <div class="greensignal"><li><a href="#">SCOPRI</a></li></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="greensignal"><a href="#">PODCAST</a></div>
+                    </li>
+                    <li>
+                        <div class="greensignal"><a href="#">CLASSIFICHE</a></div>
+                    </li>
+                    <li> 
+                        <div class="greensignal"><a href="#">GENERI E MOOD</a></div>
+                    </li>
+                    <li>
+                        <div class="greensignal"><a href="#">NUOVE USCITE</a></div>
+                    </li>
+                    <li>
+                        <div class="greensignal"><a href="#">SCOPRI</a></div>
+                    </li>
                 </ul>
             </nav>
             <h2>Recently played</h2>
@@ -183,7 +195,6 @@
                     <div class="subtitle">subtitle</div>
                 </div>
                 <div class="colonna">
-                    
                     <div class="playsong">
                         <img class="rounded" src="img/einaudi.jpeg">
                         <a class="playmain" href="#"><i class="fa-solid fa-play"></i></a> 
