--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </ul>
             </nav>
             <h2>Recently played</h2>
-            <div class="row">
+            <div class="row long">
                 <div class="colonna adaptive">
                     <div class="playsong">
                         <img src="img/metal_lifting.jpg">
